unpackaged/main/default/objects/Account/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <description>Indicates PO is required for invoicing.</description>
    <inlineHelpText>Indicates PO is required for invoicing.</inlineHelpText>
    <label>PO Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>