unpackaged/main/default/objects/Account/fields/Pre_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qualified_Date__c</fullName>
    <inlineHelpText>The first date in the term we are currently pre-qualified with this customer Account</inlineHelpText>
    <label>Pre-Qualified Date</label>
    <type>Date</type>
</CustomField>