unpackaged/main/default/objects/Account/fields/Pre_Qualified_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qualified_Expiration__c</fullName>
    <inlineHelpText>Date our current prequalification with the Customer Account will expire.</inlineHelpText>
    <label>Pre-Qualified Expiration</label>
    <type>Date</type>
</CustomField>