unpackaged/main/default/objects/Account/fields/Record_Details__c.field-meta.xml
<CustomField>
    <fullName>Record_Details__c</fullName>
    <description>This is used for search layout and providing more details to identify duplicate accounts.</description>
    <formula>IF(RecordType.Name = 'Vanguard', 'Vanguard', 'Black Diamond') + ' (' + Owner.FirstName + ' ' +  Owner.LastName + ' - ' +  BillingCity + ', '+ BillingState + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Summary</label>
    <type>Text</type>
</CustomField>