unpackaged/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Used by MPA to note categorization of the account</description>
    <inlineHelpText>Used by MPA to note categorization of the account</inlineHelpText>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>