unpackaged/main/default/objects/Account/fields/Remaining_Credit__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Credit__c</fullName>
    <label>Remaining Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>