unpackaged/main/default/objects/Account/fields/SBQQ__RenewalPricingMethod__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalPricingMethod__c</fullName>
    <description>Method for pricing products on renewal.</description>
    <inlineHelpText>Use "Same" to keep the same price paid last time. Use "List" to use current list price. Use "Uplift" to use the price paid last time plus some uplift.</inlineHelpText>
    <label>Renewal Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same</fullName>
                <default>true</default>
                <label>Same</label>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Uplift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>