unpackaged/main/default/objects/Account/fields/School_Enrollment_Count__c.field-meta.xml
<CustomField>
    <fullName>School_Enrollment_Count__c</fullName>
    <label>School Enrollment Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>