unpackaged/main/default/objects/Account/fields/Sharepoint_Customer_Folder__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Customer_Folder__c</fullName>
    <formula>HYPERLINK("https://bdgl.sharepoint.com/sites/NSDocumentCentral/Customer%20Documents/" &amp; CASESAFEID(Id) , "SharePoint Customer Folder", "_blank")</formula>
    <label>SharePoint Customer Folder</label>
    <type>Text</type>
</CustomField>