unpackaged/main/default/objects/Account/fields/SIC_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_Description__c</fullName>
    <label>SIC Code Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01-Agriculture/Forestry/Fishing</fullName>
            </value>
            <value>
                <fullName>02-Veterinarians</fullName>
            </value>
            <value>
                <fullName>07-Agricultural Services</fullName>
            </value>
            <value>
                <fullName>08-Forestry</fullName>
            </value>
            <value>
                <fullName>09-Fishing Hunting &amp; Trapping</fullName>
            </value>
            <value>
                <fullName>10-Mining/Oil&amp;Gas Extrac/Pipeline</fullName>
            </value>
            <value>
                <fullName>12-Coal Mining</fullName>
            </value>
            <value>
                <fullName>13-Oil &amp; Gas Extraction</fullName>
            </value>
            <value>
                <fullName>14-Mining &amp; Quarrying-Nonmetallic Minerals</fullName>
            </value>
            <value>
                <fullName>15A-Architects &amp; Engineers</fullName>
            </value>
            <value>
                <fullName>15-Bldg Construction - G.C.</fullName>
            </value>
            <value>
                <fullName>16-Heavy Construction - Non bldg</fullName>
            </value>
            <value>
                <fullName>17-Construction - Special Trades</fullName>
            </value>
            <value>
                <fullName>20-Manufacturing</fullName>
            </value>
            <value>
                <fullName>20F-Food Processing</fullName>
            </value>
            <value>
                <fullName>21-Tobacco Products Mfrs</fullName>
            </value>
            <value>
                <fullName>22-Textile Mill Products Mfrs</fullName>
            </value>
            <value>
                <fullName>23-Apparel &amp; Other Finished Products-Mfrs</fullName>
            </value>
            <value>
                <fullName>24-Lumber &amp; Wood Prods Except Furntr Mfrs</fullName>
            </value>
            <value>
                <fullName>25-Furniture &amp; Fixtures Mfrs</fullName>
            </value>
            <value>
                <fullName>26-Paper &amp; Allied Products Mfrs</fullName>
            </value>
            <value>
                <fullName>27-Printing Publishing &amp; Allied Industries</fullName>
            </value>
            <value>
                <fullName>28-Chemicals &amp; Allied Products Mfrs</fullName>
            </value>
            <value>
                <fullName>28C-Cannabis Mfrs</fullName>
            </value>
            <value>
                <fullName>29-Petroleum Refining &amp; Related Inds Mfrs</fullName>
            </value>
            <value>
                <fullName>30-Rubber &amp; Miscellaneous Plastics Mfrs</fullName>
            </value>
            <value>
                <fullName>31-Leather &amp; Leather Products Mfrs</fullName>
            </value>
            <value>
                <fullName>32-Stone Clay Glass &amp; Concrete Prods Mfrs</fullName>
            </value>
            <value>
                <fullName>33-Primary Metal Industries Mfrs</fullName>
            </value>
            <value>
                <fullName>34-Fabricated Metal Products Mfrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>