unpackaged/main/default/objects/Account/fields/SIC_Code_Vanguard__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_Vanguard__c</fullName>
    <description>SIC Code from Lead</description>
    <label>SIC Code Vanguard</label>
    <length>100</length>
    <type>Text</type>
</CustomField>