unpackaged/main/default/objects/Account/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alarms/Security &amp; Fire</fullName>
            </value>
            <value>
                <fullName>Brick</fullName>
            </value>
            <value>
                <fullName>Cabinets</fullName>
            </value>
            <value>
                <fullName>Carpenters</fullName>
            </value>
            <value>
                <fullName>Carpet and Tile</fullName>
            </value>
            <value>
                <fullName>Ceiling</fullName>
            </value>
            <value>
                <fullName>Charter School</fullName>
            </value>
            <value>
                <fullName>Child Care</fullName>
            </value>
            <value>
                <fullName>Churches</fullName>
            </value>
            <value>
                <fullName>Colleges and Universities</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Contractors</fullName>
            </value>
            <value>
                <fullName>Decks and Ramps</fullName>
            </value>
            <value>
                <fullName>Defense Contractors</fullName>
            </value>
            <value>
                <fullName>Dumpsters</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Elevators</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>General Contractors</fullName>
            </value>
            <value>
                <fullName>Govt City</fullName>
            </value>
            <value>
                <fullName>Govt County/Parish</fullName>
            </value>
            <value>
                <fullName>Govt Federal</fullName>
            </value>
            <value>
                <fullName>Govt State</fullName>
            </value>
            <value>
                <fullName>Gutters</fullName>
            </value>
            <value>
                <fullName>Home Builder</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>IT Wiring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>