unpackaged/main/default/objects/Account/fields/Test_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Test_Cycle__c</fullName>
    <label>Test Cycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>