unpackaged/main/default/objects/Account/fields/TIPS__c.field-meta.xml
<CustomField>
    <fullName>TIPS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Interlocal Purchasing System</inlineHelpText>
    <label>TIPS</label>
    <type>Checkbox</type>
</CustomField>