unpackaged/main/default/objects/Account/fields/TM_Number__c.field-meta.xml
<CustomField>
    <fullName>TM_Number__c</fullName>
    <label>TM Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>