unpackaged/main/default/objects/Account/fields/Top_10__c.field-meta.xml
<CustomField>
    <fullName>Top_10__c</fullName>
    <description>Select if account is a top 10 customer or prospect</description>
    <inlineHelpText>Select if account is a top 10 customer or prospect</inlineHelpText>
    <label>Top 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top 10 Prospect</fullName>
            </value>
            <value>
                <fullName>Top 10 Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>