unpackaged/main/default/objects/Account/fields/Used_Credit__c.field-meta.xml
<CustomField>
    <fullName>Used_Credit__c</fullName>
    <label>Used Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>