unpackaged/main/default/objects/Account/fields/Value_of_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Won_Opportunities__c</fullName>
    <description>Total contract value of Closed-Won Opportunities for this Account</description>
    <inlineHelpText>Total contract value of Closed-Won Opportunities for this Account</inlineHelpText>
    <label>$ of Won Opportunities</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>