unpackaged/main/default/objects/Account/fields/Vanguard_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Account_ID__c</fullName>
    <description>Unique ID from Navision for Legacy data. Change to Autonumber (AC000000) after data load and go-live.
Not ID</description>
    <displayFormat>AC{000000}</displayFormat>
    <inlineHelpText>Unique ID from Navision for Legacy data.
Not ID</inlineHelpText>
    <label>Vanguard Account ID</label>
    <type>AutoNumber</type>
</CustomField>