unpackaged/main/default/objects/Account/fields/Vanguard_Account_ID_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Account_ID_Record_ID__c</fullName>
    <description>Actual Salesforce Record ID for mapping</description>
    <externalId>true</externalId>
    <label>Vanguard Account ID(Record ID)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>