unpackaged/main/default/objects/Account/fields/Vanguard_Branch__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Branch__c</fullName>
    <label>Vanguard Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>