unpackaged/main/default/objects/Account/fields/Vanguard_Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Department_Code__c</fullName>
    <description>Department Code initialized based on initial Owner, but can be overriden. Will be used by Vanguard.</description>
    <label>Vanguard Department Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>