unpackaged/main/default/objects/Account/fields/Vanguard_Number_of_locations__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Number_of_locations__c</fullName>
    <label>Number of locations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>2-10</fullName>
            </value>
            <value>
                <fullName>11-50</fullName>
            </value>
            <value>
                <fullName>50+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>