unpackaged/main/default/objects/Account/fields/Vanguard_Region__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Region__c</fullName>
    <description>To be used by Vanguard</description>
    <label>Vanguard Region</label>
    <length>5</length>
    <type>Text</type>
</CustomField>