unpackaged/main/default/objects/Account/recordTypes/MSS_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>MSS_Record_Type</fullName>
    <active>true</active>
    <label>MSS Record Type</label>
</RecordType>