unpackaged/main/default/objects/Account/recordTypes/Vanguard.recordType-meta.xml
<RecordType>
    <fullName>Vanguard</fullName>
    <active>true</active>
    <label>Vanguard</label>
</RecordType>