unpackaged/main/default/objects/Account/validationRules/Account_Name_locked_if_Opptys_are_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_locked_if_Opptys_are_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Number_of_Won_Opportunities__c  &gt; 0,  ISCHANGED(Name), $User.Username &lt;&gt; 'rgali@blackdiamondgroup.com.fullcopy',
$User.Username &lt;&gt; 'rmcneill@blackdiamondgroup.com',
$User.Username &lt;&gt; 'sbohannon@boxxmodular.com',
$User.Username &lt;&gt; 'djimenez@boxxmodular.com.fullcopy',
$User.Username&lt;&gt;'dlawal@blackdiamondgroup.com',
$User.Username&lt;&gt;'jleslie@blackdiamondgroup.com.fullcopy')</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Name cannot be changed when there are Opportunity that are Closed Won</errorMessage>
</ValidationRule>