unpackaged/main/default/objects/Account/validationRules/Lead_Source_Details_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Details_required</fullName>
    <active>true</active>
    <description>Used to manage values for the Lead/Account Source picklist</description>
    <errorConditionFormula>AND(
RecordType.Name  &lt;&gt; "Vanguard",
ISPICKVAL( AccountSource , "Other"),
Original_Lead_Source_Detail__c = ""
)</errorConditionFormula>
    <errorDisplayField>Original_Lead_Source_Detail__c</errorDisplayField>
    <errorMessage>Describe "Other" Lead Source.</errorMessage>
</ValidationRule>