unpackaged/main/default/objects/Account/validationRules/Sic_Code_Description_Mandatory_for_MSS.validationRule-meta.xml
<ValidationRule>
    <fullName>Sic_Code_Description_Mandatory_for_MSS</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  RecordType.Name= 'MSS Record Type', ISPICKVAL( SIC_Code_Description__c , ''), $User.Username &lt;&gt; 'rgali@blackdiamondgroup.com',    NOT( ISPICKVAL( AccountSource ,'ConstructConnect')))</errorConditionFormula>
    <errorDisplayField>SIC_Code_Description__c</errorDisplayField>
    <errorMessage>Please select a valid SIC Code Description on the Account record</errorMessage>
</ValidationRule>