unpackaged/main/default/objects/Account/listViews/Accounts_by_State_Atlanta_Branch.listView-meta.xml
<ListView>
    <fullName>Accounts_by_State_Atlanta_Branch</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>PC_ADDRESS2_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
    <columns>Account_Type__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.MSS_Record_Type</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE_CODE</field>
        <operation>equals</operation>
        <value>AL,FL,GA,TN</value>
    </filters>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Construction</value>
    </filters>
    <label>Accounts by State - Atlanta Branch</label>
    <sharedTo>
        <group>All_BD_Users</group>
    </sharedTo>
</ListView>