unpackaged/main/default/objects/Account/listViews/Accounts_with_COOPs.listView-meta.xml
<ListView>
    <fullName>Accounts_with_COOPs</fullName>
    <booleanFilter>1 OR (2 OR 3 OR 4)</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>Account_Flag__c</columns>
    <columns>Cooperative__c</columns>
    <columns>JMU__c</columns>
    <columns>KPN__c</columns>
    <columns>TIPS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cooperative__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>JMU__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>KPN__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TIPS__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Accounts part of COOPs</label>
    <sharedTo>
        <group>All_BD_Users</group>
        <group>All_Vanguard</group>
        <roleAndSubordinatesInternal>CEO</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>