unpackaged/main/default/objects/Account/listViews/All_Accounts_One_Owner_Lynette_W.listView-meta.xml
<ListView>
    <fullName>All_Accounts_One_Owner_Lynette_W</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Account_Type__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>lwoot</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.MSS_Record_Type</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Accounts One Owner  - Lynette W.</label>
    <sharedTo>
        <group>All_BD_Users</group>
    </sharedTo>
</ListView>