unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>Account_Flag__c</columns>
    <columns>Record_Details__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_CITY</field>
        <operation>contains</operation>
        <value>kelowna</value>
    </filters>
    <label>All Accounts</label>
</ListView>